# sassy-snallygasters_code-jam-9

./: .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  __main__.py  main.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: format_lint_test.yml  lint.yml
buggy_chess/: initial_position.py
database/: db.py  postgres.py
setup/: __init__.py  setup.py
utils/: __init__.py  data.py
wild_chess/: __init__.py  __main__.py  baz.py  gui.py
wild_chess/client/: client.py
wild_chess/database/: __init__.py  db.py  postgres.py
wild_chess/gui/: __init__.py  gui.py
wild_chess/logic/: __init__.py  initial_position.py  movement.py  pieces.py
wild_chess/package_name/: __init__.py  foo.py
wild_chess/server/: __init__.py  client.html  index.html  main.py  script.js  server.py
wild_chess/server/routes/: __init__.py  authentication.py  db_setup.py  leaderboard.py  multiplayer.py
wild_chess/setup/: __init__.py  setup.py
wild_chess/tests/: test_baz.py
wild_chess/tests/package_name/: __init__.py  test_foo.py
wild_chess/utils/: __init__.py  board.py  chess_logic.py  data.py  piece.py
