[tool.poetry]
name = "sassy-snallygasters_code-jam-9"
version = "1.0.0"
description = "Python Code Jam 9 submission by team Sassy Snallygasters."
authors = ["SFM61319 <svasssakavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
mypy = "~0.971"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
black = "~22.6.0"
flake8 = "~4.0.1"
flake8-docstrings = "~1.6.0"
isort = "~5.10.1"
pre-commit = "~2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ["py310"]
